# lushfoil-critics-streamlit

./: .gitignore  README.md  plan.txt  pyproject.toml  session_log.json
.windsurf/rules/: testing-changes.md
logs/: .gitignore  session_log.json
scripts/: list_elevenlabs_voices.py  validate_voices.py
src/lushfoil_critics_streamlit/: __init__.py  app.py  critic_prompt.txt  critics.yaml
src/lushfoil_critics_streamlit/pages/: log_viewer.py
